test/conformance/chainsaw/validate/policy/standard/psa/test-exclusion-running-as-nonRoot-user/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-running-as-non-root-user
spec:
  background: true
  validationFailureAction: Enforce
  rules:
  - name: test-exclusion-running-as-non-root-user
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      podSecurity:
        level: restricted
        version: latest
        exclude:
        - controlName: "Running as Non-root user"
          restrictedField: "spec.securityContext.runAsUser"
          values:
          - "0"
        - controlName: "Running as Non-root user"
          images:
          - nginx
          restrictedField: "spec.containers[*].securityContext.runAsUser"
          values:
          - "0"
